# lambx

./: Cargo.toml  README.md  test.sh  testOut.txt
server/: .gitignore  Cargo.toml  testSecure.sh
server/src/: config.rs  log.rs  main.rs
src/: main.rs  server.rs  test.rs  xeddsa.rs
