[package]
name = "lams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnum = "0.9.0"
curve25519-dalek = { version = "4.1.1", features = ["legacy_compatibility"] }
ethnum = "1.4.0"
rand = "0.8.5"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
